<resources>
    <string name="app_name">开机设置</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="detect_network_bigTitle">网络连接</string>
	<string name="detect_network_littleTitle">设置网络连接方式</string>
	<string name="detect_network_detectingTip">正在检测网络</string>
	<string name="detect_network_detectedNetworkTip_wireless">无线</string>
	<string name="detect_network_detectedNetworkTip_ethernet">有线</string>
	<string name="detect_network_wirelessTip_connected">已连接</string>
	<string name="detect_network_next">下一步</string>
	<string name="detect_network_dump">(跳过)</string>
	<string name="ethernet_bigTitle">有线网络</string>
	<string name="ethernet_littleTitle">有线网络相关设置</string>
	<string name="network_detial_ip">地址：</string>
	<string name="network_detial_yanma">掩码：</string>
	<string name="network_detial_wangguan">网关：</string>
	<string name="network_detial_dns">DNS：</string>
	<string name="network_detial_submit">提交</string>
	<string name="network_detial_ignore">忽略此网络</string>
	<string name="network_detial_autoMatch">自动匹配</string>
	<string name="network_detial_open">开</string>
	<string name="network_detial_close">关</string>
	<string name="wireless_bigTitle">无线网络</string>
	<string name="wireless_littleTitle">无线网络相关设置</string>
	<string name="enter_wifi_password_pass_text">密码：</string>
	<string name="add_network_manually_text">手动添加网络</string>
	<string name="add_network_encryption">加密方式：</string>
	<string name="add_network_SSID">SSID:</string>
	<string name="select_accout_bigTitle">账号</string>
	<string name="select_accout_littleTitle">绑定QQ账户</string>
	<string name="select_accout_LoginLater">稍后登陆</string>
	<string name="select_accout_ImmediatelyExperience ">马上体验</string>
	<string name="select_accout_longTip">提示：\nqq账号用于影视信息管理\n微信账号同步相册 登陆后\n可获得完美互动体验</string>
	<string name="select_accout_qq">QQ登陆</string>
	<string name="select_accout_wechat">微信登陆</string>
	<string name="select_accout_logined">已登录</string>
	<string name="login_bigTitle">登录</string>
	<string name="login_twoweimaTip">手机扫描二维码登陆</string>
	<string name="login_tencentAccount">腾讯账号：</string>
	<string name="login_tencentPassword">密       码：</string>
	<string name="select_accout_logout">退出登录</string>
	<string name="detect_network_wirelessTip_disconnected">未连接</string>
	<string name="detect_network_wirelessTip_connecting">正在连接</string>
	<string name="wirelessTip_connectedFial">网络连接失败，请重试</string>
	<string name="wirelessTip_connectedSuccess">网络连接成功</string>
	<string name="wirelessTip_connecting">网络正在连接，请稍后</string>
	<string name="wirelessList_addNet_text">手动添加</string>
	<string name="common_setting_BigTitle">通用设置</string>
	<string name="common_setting_LittleTitle">盒子系统相关的设置</string>
	<string name="common_setting_pmbh_text">屏保</string>
	<string name="common_setting_pmbh_photo_text">屏保使用云相照片</string>
	<string name="common_setting_xiumian_text">休眠</string>
	<string name="common_setting_dlna_text">DLNA</string>
	<string name="common_setting_airplay_text">AirPlay</string>
	<string name="common_setting_weatherLoaction_text">天气</string>
	<string name="common_setting_deviceName_text">设备名称</string>
	<string-array name="common_setting_pmbh_content">关闭</string-array>
	<string name="safe_setting_BigTitle">安全</string>
	<string name="safe_setting_LittleTitle">安装未知来源应用设置</string>
	<string name="account_setting_installUnknowApp">未知来源的应用</string>
	<string name="account_setting_installUnknowApp_little">安装位置来源应用设置</string>
	<string name="account_setting_TXAccount">腾讯账户</string>
	<string name="account_setting_webchatAccount">微信账户</string>
	<string name="account_setting_unAdd">未添加</string>
	<string name="system_update_BigTitle">系统升级</string>
	<string name="system_update_littleTitle">盒子升级</string>
	<string name="system_update_newVersion">新版本</string>
	<string name="system_update_newVersion_content">亲爱的召唤师：\n
      我们将于2014年9月3日2点-10点（开机时间会因工作进度推迟或者提前）进行全区停机版本更新，期间您将无法登录游戏。\n
      停机大区：所有大区    停机原因：版本更新\n\n 又要更新版本了。虽然在这个版本中我们没有太多的平衡调整，但我们修复了大量的BUG，与此同时，我们也作出了一些清晰度的小调校，来保证通往全球冠军赛的道路能够畅通无阻。此外，由于在前两个版本中加入了大量的改动，我们也想看看稳定的大环境在英雄联盟中是如何运作的。对于纳尔来说，他得到了一些小小的加强，但这些改动集中在“感觉”的改进上，从而把他带到最佳位置上（尽管这些改动是无可否认的加强！）。你可以在关于他的改动说明中找到详细的信息！
       除了平衡调整，我们还有许多新东西想展示给你看！首先，是我们全新的大厅界面。这个视觉方面的升级代表着英雄联盟持续发展过程中的其中一步，我们想要在你进入游戏前就有更好的体验。我们还有更多微妙的、新型的、稳定的技术想要介绍给你，详情请留意我们的开发者日志。
       这就是今天更新的所有内容！详细改动请见下方！</string>
	<string name="system_update_btn_updateNow">马上升级</string>
	<string name="system_update_pop_updateNow_text">马上进行系统升级？</string>
	<string name="system_update_pop_sure_text">确定</string>
	<string name="system_update_pop_cancel_text">取消</string>
	<string name="system_update_updating_text">正在升级,这可能需要几分钟时间，请勿断电</string>
	<string name="system_update_updating_tip_text">需要花费一定时间请耐心等待</string>
	<string name="system_update_updated_success_text">恭喜您，您现在拥有最新的腾讯盒子！</string>
	<string name="system_update_updated_success_btn_VersionInfo_text">版权信息</string>
	<string name="network_bluetooth_BigTitle">蓝牙设置</string>
	<string name="network_bluetooth_littleTitle">盒子蓝牙设置</string>
	<string name="screen_pmjz">缩放与位置</string>
	<string name="screen_resolution">分辨率</string>
	<string name="screen_setting_BigTitle">画面设置</string>
	<string name="screen_setting_littleTitle">设置盒子分辨率与位置</string>
	<string name="network_BigTitle">网络</string>
	<string name="network_littleTitle">网络相关设置</string>
	<string name="network_detect_BigTitle">网络检测</string>
	<string name="network_detect_littleTitle">检测盒子网络连接状态</string>
	<string name="network_detect_local_network">正在诊断内网连接</string>
	<string name="network_detect_local_network_success">内网连接正常</string>
	<string name="network_detect_local_network_fail">内网连接异常</string>
	<string name="network_detect_dns_network_success">DNS配置正确</string>
	<string name="network_detect_dns_network_fail">DNS配置错误</string>
	<string name="network_detect_dns_network">正在诊断DNS配置</string>
	<string name="network_detect_outside_network">正在诊断外网连接</string>
	<string name="network_detect_outside_network_success">外网连接正常</string>
	<string name="network_detect_outside_network_fail">外网连接异常</string>
	<string name="network_detect_server_network">正在诊断服务器连接</string>
	<string name="network_detect_server_network_success">服务器连接正常</string>
	<string name="network_detect_server_network_fail">服务器连接异常</string>
	<string name="network_detect_success">检测完成，网络连接正常</string>
	<string name="network_detect_fail">无法连接网络，请检查</string>
	<string name="network_menu_blueTooth">蓝牙</string>
	<string name="network_menu_speed_detect">网速检测</string>
	<string name="network_setting_speed_littleTitle">检测盒子网络速度</string>
	<string name="network_setting_speed_tencent">TENCENT：</string>
	<string name="network_setting_speed_downloadrateNow">当前下载速度：</string>
	<string name="network_setting_speed_downloadrateAvg">平均下载速度：</string>
	<string name="system_settings_BigTitle">系统设置</string>
	<string name="screen_settings_BigTip">显示校正</string>
	<string name="screen_settings_littleTip">按ok进入校正页面</string>
	<string name="screen_settings_littleTitle">调整页面显示</string>
	<string name="logined_bigTitle">已登录</string>
	<string name="logined_dialog_content">确定注销当前账号吗？</string>
	<string name="logined_dialog_ok">确定</string>
	<string name="logined_dialog_cancel">取消</string>
	<string name="enterbox">进入盒子</string>
	<string name="about_setting_BigTitle">关于</string>
	<string name="about_boxTitle_text">本机名称：</string>
	<string name="about_boxVierson_text">型&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
	<string name="about_boxMac_text">mac地址：</string>
	<string name="about_boxBuletooth_text">蓝牙地址：</string>
	<string name="about_boxIp_text">I&#160;&#160;P&#160;&#160;地址：</string>
	<string name="about_boxNunber_text">广电序列号：</string>
	<string name="play_setting_BigTitle">播放设置</string>
	<string name="play_settingTitle_text">清晰度</string>
	<string name="play_setting_jump_text">跳过片头片尾</string>
	<string name="logout_text">确定退出当前登录账号？</string>
	<string name="sys_accout_text">安全</string>
	<string name="sys_play_text">播放设置</string>
	<string name="sys_network_text">网络设置</string>
	<string name="about_Restfactory">恢复出厂设置</string>
	<string name="about_Restfactory_pop_content">恢复出厂设置后设备数据将被清空。\n是否恢复出厂设置？</string>
	<string name="play_setting_LittleTitle">播放相关设置</string>
	<string name="safe_setting_state">允许</string>
	<string name="safe_setting_pop_content">您的设备和个人数据容易受到\n未知来源应用的攻击。对于因使用这些应用而造成的\n设备损坏或数据丢失，您统一自行承担责任。</string>
    <string name="useWebChatLogin_text">微信扫描二维码登录</string>
	<string name="current_speed">当前速度：</string>
    <string name="had_download">已下载：</string>
    <string name="file_size">文件大小：</string>
    <string name="avg_speed">平均速度：</string>
    <string name="download_progress">下载进度：</string>
    <string name="about_userBack">用户反馈</string>
    <string name="close_text">关闭</string>
    <string name="open_text">打开</string>
    <string name="time_5">5分钟</string>
    <string name="time_10">10分钟</string>
    <string name="time_20">20分钟</string>
    <string name="time_30">30分钟</string>
    <string name="time_60">60分钟</string>
    <string name="time_90">90分钟</string>
    <string name="time_120">120分钟</string>
    <string name="comm_deciveName_mybox">我的盒子</string>
    <string name="comm_deciveName_Livingroom">客厅</string>
    <string name="comm_deciveName_Studyroom">书房</string>
    <string name="comm_deciveName_Bedroom">卧室</string>
    <string name="comm_deciveName_Officeroom">办公室</string>
    <string name="screen_pop_content">是否保存修改？</string>
    <string name="play_settings_HD">高清</string>
    <string name="play_settings_SD">标清</string>
    <string name="play_settings_SC">超清</string>
    <string name="play_settings_BR">蓝光</string>
    <string name="play_settings_jump">跳过</string>
    <string name="play_settings_yes">是</string>
    <string name="play_settings_no">否</string>
    <string name="screen_pop_save_text">保存</string>
    <string name="network_detect_local_network_text">内网连接</string>
    <string name="network_detect_outside_network_text">外网连接</string>
    <string name="network_detect_dns_network_text">DNS</string>
    <string name="network_detect_server_network_text">服务器</string>
    <string name="useWebChatFeedback_text">微信扫描二维码反馈</string>
    <string name="china_ch">中国</string>
    <string-array  name="weacher_turn">
        <item>晴</item>
        <item>多云</item>
        <item>阴</item>
        <item>阵雨</item>
        <item>雷阵雨</item>
        <item>冰雹</item>
        <item>雨夹雪</item>
        <item>小雨</item>
        <item>中雨</item>
        <item>大雨</item>
        <item>暴雨</item>
        <item>大暴雨</item>
        <item>特大暴雨</item>
        <item>阵雪</item>
        <item>小雪</item>
        <item>中雪</item>
        <item>大雪</item>
        <item>暴雪</item>
        <item>雾</item>
        <item>冻雨</item>
        <item>沙尘暴</item>
        <item>小雨转中雨</item>
        <item>中雨转大雨</item>
        <item>大雨转暴雨</item>
        <item>暴雨转大暴雨</item>
        <item>大暴雨转特大暴雨</item>
        <item>小雪转中雪</item>
        <item>中雪转大雪</item>
        <item>大雪转暴雪</item>
        <item>浮尘</item>
        <item>扬尘</item>
        <item>强沙尘暴</item>
        <item>霾</item>
    </string-array>
    <string name="wirelessTip_nossid">SSID不能为空</string>
     <string name="detecting_speed_redetect">重新检测</string>
     <string name="detecting_speed_text">目前播放效果为:</string>
     <string name="detecting_speed_present_speed">当前速度:</string>
     <string name="password_tips">密码输入必需大于8个字符，小于63个字符</string>
      <string name="about_boxNunber_value">743298320</string>
      <string name="zero">0</string>
      <string name="baifenhao">%</string>
      <string name="kbs">KB/S</string>
      <string name="sys_settings_version">1.10(稳定版)</string>
      <string name="sure_to_logout">确定注销吗？</string>
      <string name="try_not_support">腾讯视频播放SDK暂不支持试看</string>
      <string name="midware_update_tiele">检测到腾讯中间件升级</string>
      <string name="is_update_now">是否立即升级?</string>
      <string name="update_confirm">立即升级</string>
      <string name="update_cancel">暂不升级</string>
      <string name="midware">中间件</string>
 	<string name="pivos_login_bigTitle">用户登录</string>
</resources>