<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
        android:id="@+id/main_rl"
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
        >
        
        <LinearLayout 
            android:id="@+id/topLocalInfor"
            android:layout_width="match_parent"
    		android:layout_height="30dp" 
    		android:orientation="horizontal"
    		android:layout_marginTop="10dp"
            >
        </LinearLayout>
        <RelativeLayout 
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
    		android:layout_height="83dp" 
    		android:layout_below="@id/topLocalInfor"
    		android:layout_marginTop="50dp"
    		android:layout_marginLeft="120dp"
            >
            <ImageView 
                android:id="@+id/leftIcon"
             	 android:layout_marginTop="40dp"
             	android:layout_width="20dp"
    			android:layout_height="20dp" 
    			android:layout_marginRight="10dp"
    			android:src="@drawable/top_left_icon"
    			android:visibility="invisible"
                />
            <TextView 
                android:id="@+id/bigTitle"
                android:layout_width="200dp"
    			android:layout_height="50dp" 
    			android:textSize="@dimen/page_BigTitle_size"
    			android:layout_toRightOf="@id/leftIcon"
    			android:textColor="@color/common_color_white"
    			android:text="@string/screen_setting_BigTitle"
                />
             <TextView 
                android:id="@+id/littleTitle"
                android:layout_width="200dp"
    			android:layout_height="28dp" 
    			android:textSize="@dimen/page_littleTitle_size"
    			android:layout_below="@+id/bigTitle"
    			android:textColor="@color/page_LittleTitle"
    			android:text="@string/screen_settings_littleTitle"
    			android:layout_alignLeft="@+id/bigTitle"
                />
        </RelativeLayout>
        
        <TextView 
            android:id="@+id/detectingTip"
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:text="@string/detect_network_detectingTip" 
    		android:gravity="center"
    		android:textColor="#FFFFFF"
    		android:textSize="30sp"
    		android:visibility="gone"
            />
      
	        <LinearLayout
	            android:id="@+id/screen_settingsTip_ll" 
	            android:layout_width="280dp"
	    		android:layout_height="350dp"
	    		android:orientation="vertical"
	    		android:gravity="center"
	    		android:background="@drawable/login_focus_bg"
	    		android:focusable="true"
	    		android:focusableInTouchMode="true"
	    		android:visibility="visible"
	    		android:layout_marginTop="40dp"
	    		android:layout_centerHorizontal="true"
	    		android:layout_below="@id/pageTitle"
	            >
             	<ImageView 
             	    android:id="@+id/pmjzImg"
             	    android:layout_width="120dp"
		         	android:layout_height="120dp"
		         	android:src="@drawable/pmjz_icon"
		         	android:layout_marginTop="20dp"
             	    />
	            <TextView 
	                android:id="@+id/screen_settingsTip_title"
	                 android:layout_width="match_parent"
	    			android:layout_height="45dp"
	    			android:textColor="#FFFFFF"
	    			android:textSize="30sp"
	    			android:layout_marginTop="20dp"
	    			android:gravity="center"
	    			android:textStyle="bold"
	    			android:text="@string/screen_settings_BigTip"
	                />
	            <TextView 
	                 android:id="@+id/screen_settingsTip_state"
	                 android:layout_width="match_parent"
	    			android:layout_height="30dp"
	    			android:textColor="#FFFFFF"
	    			android:textSize="18sp"
	    			android:gravity="center"
	    			android:layout_marginTop="5dp"
	    			android:text="@string/screen_settings_littleTip"
	                />
	        </LinearLayout>
	        
	        
	        <LinearLayout 
	            android:id="@+id/next_ll"
	            android:layout_width="200dp"
	    		android:layout_height="80dp"
	    		android:background="@null"
	    		android:gravity="center"
	    		android:layout_marginLeft="220dp"
	    		android:layout_marginTop="50dp"
	    		android:layout_toRightOf="@id/screen_settingsTip_ll"
	    		android:layout_below="@id/screen_settingsTip_ll"
	    		android:focusable="true"
	    		android:visibility="visible"
	            >
	        <TextView
	                android:id="@+id/next_text" 
	              	android:layout_width="200dp"
	    			android:layout_height="80dp"
	    			android:textColor="#4c5c6a"
	    			android:textSize="30sp"
	    			android:gravity="center"
	    			android:text="@string/detect_network_next"
	    			android:textStyle="bold"
	            />

	        <TextView
	            android:layout_width="100dp"
	            android:layout_height="60dp"
	            android:gravity="center"
	            android:text="@string/detect_network_dump"
	            android:textColor="#80FFFFFF"
	            android:textSize="25sp" 
	            android:visibility="gone"/>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
