<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
        >
        <LinearLayout 
            android:id="@+id/topLocalInfor"
            android:layout_width="match_parent"
    		android:layout_height="30dp" 
    		android:orientation="horizontal"
    		android:layout_marginTop="10dp"
            >
            <include layout="@layout/local_infor"/>
        </LinearLayout>
        <RelativeLayout 
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
    		android:layout_height="83dp" 
    		android:layout_below="@id/topLocalInfor"
    		android:layout_marginTop="50dp"
    		android:layout_marginLeft="120dp"
            >
            <ImageView 
                android:id="@+id/leftIcon"
             	android:layout_width="20dp"
                android:layout_height="83dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/top_left_icon"
                />
            <TextView 
                android:id="@+id/bigTitle"
                android:layout_width="200dp"
    			android:layout_height="50dp" 
    			android:textSize="@dimen/page_BigTitle_size"
    			android:layout_toRightOf="@id/leftIcon"
    			android:textColor="#FFFFFF"
    			android:text="@string/network_menu_speed_detect"
                />
             <TextView 
                android:id="@+id/littleTitle"
                android:layout_width="200dp"
    			android:layout_height="28dp" 
    			android:textSize="@dimen/page_littleTitle_size"
    			android:layout_below="@+id/bigTitle"
    			android:textColor="@color/page_LittleTitle"
    			android:text="@string/network_setting_speed_littleTitle"
    			android:layout_alignLeft="@+id/bigTitle"
                />
        </RelativeLayout>
        
        <LinearLayout 
             android:id="@+id/ll"
             android:layout_width="match_parent"
    		 android:layout_height="500dp" 
    		 android:gravity="center"
    		 android:layout_centerHorizontal="true"
    		 android:layout_below="@id/pageTitle"
    		 android:orientation="vertical"
    		 android:focusable="true"
            >
            <LinearLayout 
              android:layout_width="1000dp"
    		 android:layout_height="150dp" 
    		 android:orientation="horizontal"
    		 android:layout_marginLeft="30dp"
    		 android:gravity="center_vertical"
                >
                <TextView 
                    android:layout_width="wrap_content"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="@color/common_color_grey"
    		 		android:textSize="28sp" 
    		 		android:text="@string/network_setting_speed_tencent"
                    />
                <TextView 
                    android:id="@+id/tencent"
                    android:layout_width="50dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="#08e6ff"
    		 		android:textSize="28sp" 
    		 		android:gravity="right|center_vertical"
    		 		android:layout_marginLeft="5dp"
    		 		android:text="@string/zero"
    		 		android:alpha="0.5"
                    />
                <TextView 
                    android:layout_width="80dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="#08e6ff"
    		 		android:textSize="15sp"
    		 		android:layout_marginTop="5dp"
    		 		android:text="@string/baifenhao"
    		 		android:alpha="0.5"
                    />
                 <TextView 
                    android:layout_width="200dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="@color/common_color_grey"
    		 		android:textSize="28sp" 
    		 		android:text="@string/network_setting_speed_downloadrateNow"
                    />
                <TextView 
                    android:id="@+id/highestspeed"
                    android:layout_width="80dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="#08ff3c"
    		 		android:textSize="28sp" 
    		 		android:gravity="right|center_vertical"
    		 		android:text="@string/zero"
    		 		android:alpha="0.5"
                    />
                <TextView 
                    android:layout_width="100dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="#08ff3c"
    		 		android:textSize="15sp"
    		 		android:layout_marginTop="5dp"
    		 		android:text="@string/kbs"
    		 		android:alpha="0.5"
                    />
                 <TextView 
                    android:layout_width="200dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="@color/common_color_grey"
    		 		android:textSize="28sp" 
    		 		android:text="@string/network_setting_speed_downloadrateAvg"
                    />
                <TextView 
                    android:id="@+id/Avgspeed"
                    android:layout_width="80dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="#ffcc00"
    		 		android:textSize="28sp" 
    		 		android:gravity="right|center_vertical"
    		 		android:text="@string/zero"
    		 		android:alpha="0.5"
                    />
                <TextView 
                    android:layout_width="100dp"
    		 		android:layout_height="wrap_content"
    		 		android:textColor="#ffcc00"
    		 		android:textSize="15sp"
    		 		android:layout_marginTop="5dp"
    		 		android:text="@string/kbs"
    		 		android:alpha="0.5"
                    />
            </LinearLayout>
            
            <!-- speed rate picture -->
            <LinearLayout 
                 android:layout_width="1100dp"
    		 	 android:layout_height="match_parent"
    		 	 android:background="#90000000"
    		 	 android:gravity="left|center_vertical"
                >
                <Button 
                    android:id="@+id/test"
                    android:layout_width="100dp"
    		 	 	android:layout_height="50dp" 
                    />
            </LinearLayout>
            
        </LinearLayout>
       
    </RelativeLayout>

</FrameLayout>
