<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="200dp"
     	android:gravity="center"
     	android:layout_gravity="bottom|center_horizontal"
     	 android:background="@drawable/logout_dialog_bg"
    	android:orientation="vertical"
        >
	<TextView
	    android:id="@+id/message_title"
	    android:layout_width="match_parent"
    	android:layout_height="70dp"
    	android:gravity="center|bottom"
    	android:text="@string/logout_text"
    	android:textColor="@color/common_color_white"
    	android:textSize="22sp"
    	android:paddingTop="30dp"
	    />
		<LinearLayout 
		    android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:orientation="horizontal"
	    	android:gravity="center"
	    	android:paddingBottom="10dp"
		    >
		    <Button 
		        android:id="@+id/sure"
		        android:layout_width="200dp"
	    		android:layout_height="70dp" 
	    		android:textColor="@color/common_color_grey_white"
	    		android:text="@string/system_update_pop_sure_text"
	    		android:background="@null"
	    		android:gravity="center"
	    		android:textSize="22sp"
		        />
		    <Button 
		        android:id="@+id/cancel"
		        android:layout_width="200dp"
	    		android:layout_height="70dp" 
	    		android:layout_marginLeft="50dp"
	    		android:textColor="@color/common_color_grey_white"
	    		android:text="@string/system_update_pop_cancel_text"
	    		android:background="@null"
	    		android:gravity="center"
	    		android:textSize="22sp"
		        />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
