<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
        >
        <LinearLayout 
            android:id="@+id/topLocalInfor"
            android:layout_width="match_parent"
    		android:layout_height="30dp" 
    		android:orientation="horizontal"
    		android:layout_marginTop="10dp"
            >
            <include layout="@layout/local_infor"/>
        </LinearLayout>
        <RelativeLayout 
            android:id="@+id/pageTitle"
            android:layout_width="match_parent"
    		android:layout_height="83dp" 
    		android:layout_below="@id/topLocalInfor"
    		android:layout_marginTop="50dp"
    		android:layout_marginLeft="120dp"
            >
            <ImageView 
                android:id="@+id/leftIcon"
             	android:layout_width="20dp"
    			android:layout_height="83dp" 
    			android:layout_marginRight="20dp"
    			android:src="@drawable/top_left_icon"
                />
            <TextView 
                android:id="@+id/bigTitle"
                android:layout_width="200dp"
    			android:layout_height="80dp" 
    			android:textSize="@dimen/page_BigTitle_size"
    			android:layout_toRightOf="@id/leftIcon"
    			android:textColor="@color/common_color_white"
    			android:text="@string/about_setting_BigTitle"
    			android:gravity="center_vertical"
                />
             <TextView 
                android:id="@+id/littleTitle"
                android:layout_width="200dp"
    			android:layout_height="28dp" 
    			android:textSize="@dimen/page_littleTitle_size"
    			android:layout_below="@+id/bigTitle"
    			android:textColor="@color/page_LittleTitle"
    			android:layout_alignLeft="@+id/bigTitle"
    			android:visibility="gone"
                />
        </RelativeLayout>
        
        <LinearLayout 
             android:id="@+id/ll"
             android:layout_width="800dp"
    		 android:layout_height="500dp" 
    		 android:gravity="center"
    		 android:layout_centerHorizontal="true"
    		 android:layout_below="@id/pageTitle"
    		 android:orientation="vertical"
            >
             <LinearLayout 
                  android:layout_width="600dp"
    			  android:layout_height="50dp" 
    			  android:orientation="horizontal"
    			  android:layout_marginLeft="@dimen/about_left"
    			  android:gravity="center_vertical"
                 >
                 <TextView 
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			  	android:textSize="@dimen/about_text_size"
    			  	android:text="@string/about_boxTitle_text"
                     />
                 <TextView 
                     android:id="@+id/box_name"
                    android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			     android:layout_marginLeft="32dp"
                     />
             </LinearLayout>
              <LinearLayout 
                  android:layout_width="600dp"
    			  android:layout_height="50dp" 
    			  android:orientation="horizontal"
    			  android:gravity="center_vertical"
    			  android:layout_marginLeft="@dimen/about_left"
                 >
                 <TextView 
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	android:text="@string/about_boxVierson_text"
                     />
                 <TextView 
                      android:id="@+id/box_version"
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	 android:layout_marginLeft="32dp"
                     />
             </LinearLayout>
              <LinearLayout 
                  android:layout_width="600dp"
    			  android:layout_height="50dp" 
    			  android:orientation="horizontal"
    			  android:layout_marginLeft="@dimen/about_left"
    			  android:gravity="center_vertical"
                 >
                 <TextView 
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	android:text="@string/about_boxMac_text"
                     />
                 <TextView 
                      android:id="@+id/box_mac"
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			    android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	 android:layout_marginLeft="32dp"
                     />
             </LinearLayout>
              <LinearLayout 
                  android:layout_width="600dp"
    			  android:layout_height="50dp" 
    			  android:orientation="horizontal"
    			  android:layout_marginLeft="@dimen/about_left"
    			  android:gravity="center_vertical"
                 >
                 <TextView 
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	android:text="@string/about_boxIp_text"
                     />
                 <TextView 
                      android:id="@+id/box_ip"
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			    android:layout_marginLeft="32dp"
                     />
             </LinearLayout>
              <LinearLayout 
                  android:layout_width="600dp"
    			  android:layout_height="50dp" 
    			  android:layout_marginLeft="@dimen/about_left"
    			  android:orientation="horizontal"
    			  android:gravity="center_vertical"
                 >
                 <TextView 
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	android:text="@string/about_boxNunber_text"
                     />
                 <TextView 
                      android:id="@+id/box_seriesNumb"
                     android:layout_width="wrap_content"
    			  	android:layout_height="50dp" 
    			  	android:textColor="@color/about_text"
    			    android:textSize="@dimen/about_text_size"
    			  	android:text="@string/about_boxNunber_value"
    			  	android:layout_marginLeft="7dp"
                     />
             </LinearLayout>
             <LinearLayout 
                 android:layout_width="wrap_content"
    			  	android:layout_height="wrap_content" 
    			  	android:gravity="center"
    			  	android:layout_marginTop="80dp"
    			  	android:orientation="horizontal"
                 >
              <Button 
                    android:id="@+id/restFactoryBtn"
                    android:layout_width="250dp"
    			  	android:layout_height="80dp" 
    			  	android:text="@string/about_Restfactory"
    			  	android:textColor="#FFFFFF"
    			  	android:textSize="24sp"
    			  	android:background="@drawable/btn_focus"
                  />
              <Button 
                    android:id="@+id/userBackBtn"
                    android:layout_width="250dp"
    			  	android:layout_height="80dp" 
    			  	android:text="@string/about_userBack"
    			  	android:textColor="#FFFFFF"
    			  	android:textSize="24sp"
    			  	android:layout_marginLeft="20dp"
    			  	android:background="@drawable/btn_focus"
                  />
              </LinearLayout>
        </LinearLayout>
       
    </RelativeLayout>

</FrameLayout>
